--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -4,6 +4,8 @@
 @{
 }
 
+<!-- Home page with a heading and a picture -->
+
 <body>
 
     <div class="text-center">
@@ -14,6 +16,6 @@
         <br />
         <p> This is where the movies are! </p>
     </div>
-    
+
 
 </body>
